<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>topic_monitor</name>
  <version>0.7.8</version>
  <description>Package containing tools for monitoring ROS 2 topics.</description>
  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
  <license>Apache License 2.0</license>

  <author>D. Hood</author>

  <build_depend>rclpy</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
